--- a/src/HelloMurder/resources/assets/data/Localization/Resource-en-US.json
+++ b/src/HelloMurder/resources/assets/data/Localization/Resource-en-US.json
@@ -2,11 +2,12 @@
   "$type": "Murder.Assets.Localization.LocalizationAsset, Murder",
   "_resources": {
     "$type": "System.Collections.Immutable.ImmutableDictionary`2[[System.Guid, System.Private.CoreLib],[Murder.Assets.Localization.LocalizedStringData, Murder]], System.Collections.Immutable",
-    "a551bf5c-917f-4a82-b8be-b35d3a63f91d": {
+    "a471e436-2e04-4183-a907-f980badc13bb": {
       "$type": "Murder.Assets.Localization.LocalizedStringData, Murder",
-      "String": "o....!!!"
+      "String": "Hello world!",
+      "Counter": 1
     }
   },
-  "Name": "Global",
-  "Guid": "7d177194-8c19-4943-a9e7-9c89db1a2786"
+  "Name": "Resource-en-US",
+  "Guid": "5d9f396c-b97f-4df4-8652-659271480888"
 }
