--- a/src/HelloMurder/resources/assets/data/Localization/Resource-en-US.json
+++ b/src/HelloMurder/resources/assets/data/Localization/Resource-en-US.json
@@ -1,28 +1,14 @@
 {
   "$type": "Murder.Assets.Localization.LocalizationAsset, Murder",
   "_resources": {
-    "$type": "System.Collections.Immutable.ImmutableDictionary`2[[System.Guid, System.Private.CoreLib],[Murder.Assets.Localization.LocalizedStringData, Murder]], System.Collections.Immutable",
-    "ee48fead-e299-4ba1-be2f-ffe5f939abc1": {
-      "$type": "Murder.Assets.Localization.LocalizedStringData, Murder",
-      "String": "This is a hello world.",
-      "Counter": 1
-    },
-    "4ad3b8dc-1855-4ebc-b9ed-75e008dc4e48": {
-      "$type": "Murder.Assets.Localization.LocalizedStringData, Murder",
-      "String": "Okay, bye!",
-      "Counter": 1
-    },
-    "51db70bd-2a24-40b4-82b6-e0f68b7a6d14": {
-      "$type": "Murder.Assets.Localization.LocalizedStringData, Murder",
-      "String": "As you may have noticed.",
-      "Counter": 1
-    },
-    "340070e9-3d17-43bd-8548-5c7cfdc33024": {
-      "$type": "Murder.Assets.Localization.LocalizedStringData, Murder",
-      "String": "I needed strings to test this.",
-      "Counter": 1,
-      "Notes": "This is for..."
-    }
+    "$type": "System.Collections.Immutable.ImmutableArray`1[[Murder.Assets.Localization.LocalizedStringData, Murder]], System.Collections.Immutable",
+    "$values": [
+      {
+        "$type": "Murder.Assets.Localization.LocalizedStringData, Murder",
+        "Guid": "a11979d7-ac60-453c-ab3f-b8ef70e42dd5",
+        "String": "asdsdfdfasdfsdf"
+      }
+    ]
   },
   "Name": "Resource-en-US",
   "Guid": "5d9f396c-b97f-4df4-8652-659271480888"
